--- a/result.html
+++ b/result.html
@@ -26,12 +26,13 @@
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
                         <body>
-                            <div class="Title">
+                            <div class="Title align-items-center justify-content-center text-center">
                                 <h1>Your result is:</h1>
+                                <h2 id="ProfileName"></h2>
+                        <a class="btn btn-primary btn-xl" href="test.html">Redo the test</a>
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <h2 id="ProfileName"></h2>
-                        <a class="btn btn-primary btn-xl" href="test.html">Redo the test</a>
+                        
                     </div>
                 </div>
             </div>
