--- a/result.html
+++ b/result.html
@@ -29,10 +29,10 @@
                             <div class="Title align-items-center justify-content-center text-center">
                                 <h1>Your result is:</h1>
                                 <h2 id="ProfileName"></h2>
-                        <a class="btn btn-primary btn-xl" href="test.html">Redo the test</a>
-                    </div>
+                                <hr class="divider" />
+                            </div>
                     <div class="col-lg-8 align-self-baseline">
-                        
+                        <a class="btn btn-primary btn-xl" href="test.html">Redo the test</a>
                     </div>
                 </div>
             </div>
