final version of test without submit that deactivates

--- a/test.html
+++ b/test.html
@@ -102,7 +102,7 @@
             let input = document.querySelector(".question4")
             let button = document.querySelector(".btn")
 
-            button.disabled = true;
+            button.disabled = false;
 
 
 
